--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,19 @@ JWT_REFRESH_EXPIRATION=7d
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Gmail API Configuration
+# Gmail API Configuration (OAuth 2.0)
 GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI=http://localhost:3000/gmail/admin/backend-callback
+
+# Gmail Backend Account (Centralized Email Reading)
+# This is the refresh token for the backend's Gmail account
+# Obtain this by visiting /gmail/admin/backend-auth-url once
+GMAIL_BACKEND_REFRESH_TOKEN=your_backend_refresh_token_here
+
+# Email Forwarding Domain (for user forwarding addresses)
+# Users will forward their bank emails to addresses like: user-xxxxx@this-domain
+FORWARDING_EMAIL_DOMAIN=moni-emails.com
 
 # App Configuration
 PORT=3000
